preliminary layout started

--- a/index.html
+++ b/index.html
@@ -14,6 +14,27 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  
+  <header class="headline">
+    <img class="cv-photo" src="robot.jpg" alt="man using computer">
+    <div class="header-text">
+      <h1>Mr. Roboto: Dev-Bot</h1>
+      <p>I specialize in front-end stuff mainly. And my head slightly resembles a hairdryer!</p>
+      <button>Domo arigato!</button>
+      <h2>Skillset:</h2>
+      <ul>
+        <li>Fully programmed barista</li>
+        <li>16-hour battery life</li>
+        <li>Proficient in HTML5, CSS3, and JavaScript</li>
+        <li>Quantum computing upgrade pending...</li>
+      </ul>
+    </div>
+    <nav class="navigation">
+      <a href="">Blog</a>
+      <a href="">About</a>
+      <a href="">Portfolio</a>
+      <a href="">Contact</a>
+    </nav>
+  </header>
 </body>
 </html>
