index.less begun

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="header-text">
       <h1>Mr. Roboto: Dev-Bot</h1>
       <p>I specialize in front-end stuff mainly. And my head slightly resembles a hairdryer!</p>
-      <button>Domo arigato!</button>
+      <button>Contact me!</button>
       <h2>Skillset:</h2>
       <ul>
         <li>Fully programmed barista</li>
@@ -36,5 +36,17 @@
       <a href="">Contact</a>
     </nav>
   </header>
+
+  <section class="work-history-container">
+      <h2>Work History:</h2>
+      <ol>
+        <li>NASA (2016 - present): Junior Front-End Developer / Greeter</li>
+        <li>Spotify (2015 - 2016): UX/UI Specialist / Coffeemaker</li>
+        <li>Coast to Coast AM (2012 - 2015): Webmaster / Vacuum Cleaner</li>
+      </ol>
+  </section>
+  <footer>
+    <h3>Copyright MMXX: thatIsOneUglyResume.com</h3>
+  </footer>
 </body>
 </html>
