--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   
   <header class="headline">
     <img class="cv-photo" src="robot.jpg" alt="man using computer">
-    <div class="header-text">
+    <div class="main-text">
       <h1>Mr. Roboto: Dev-Bot</h1>
       <p>I specialize in front-end stuff mainly. And my head slightly resembles a hairdryer!</p>
       <button>Contact me!</button>
@@ -39,11 +39,11 @@
 
   <section class="work-history-container">
       <h2>Work History:</h2>
-      <ol>
+      <ul>
         <li>NASA (2016 - present): Junior Front-End Developer / Greeter</li>
         <li>Spotify (2015 - 2016): UX/UI Specialist / Coffeemaker</li>
         <li>Coast to Coast AM (2012 - 2015): Webmaster / Vacuum Cleaner</li>
-      </ol>
+      </ul>
   </section>
   <footer>
     <h3>Copyright MMXX: thatIsOneUglyResume.com</h3>
